Ok, I'm going to start raging now.
Jenkins requires me to commit every single one of these, and I've never
used Jenkins before in my life, much less Maven.

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<!--Main-->
 		<resource>
 			<targetPath>main/java/com/webkonsept/minecraft/lagmeter</targetPath>
-			<filtering>false</filtering>
+			<filtering>true</filtering>
 			<directory>${basedir}/src/main/java/com/webkonsept/minecraft/lagmeter</directory>
 			<includes>
 				<include>LagMeter.class</include>
