Add default config node for config that I'm about to add for the display of entities in the lag commands

--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -6,6 +6,7 @@ log:
     enable: true
     useLogsFolder: false
     logPlayersOnline: true
+    displayEntitiesInLagCmds: true
 Notifications:
     Lag:
         Enabled: true
