Make my name come before Demmy's so it doesn't tell you to nag him when he no longer works on LagMeter.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -43,5 +43,5 @@ permissions:
 generators: [bukget]
 categories: [INFO]
 maintainer: marvinej
-authors: [DemmyDemon, TheLunarFrog]
+authors: [TheLunarFrog, DemmyDemon]
 softdepend: [Vault]
