Add a base command with sub-commands of help and reload.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -32,6 +32,9 @@ commands:
     lmp:
         description: Shows TPS, memory, and players online.
         usage: /<command>
+    lagmeter:
+        description: Shows the version. Sub-commands of help and reload have obvious functions.
+        usage: /<command>
 permissions:
     lagmeter.*:
         description: Gives full access
