--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -59,7 +59,7 @@ log:
     newBlockPerLog: true
     #Should the plugin put each statistic (TPS, memory, players) on a separate line?
     #Default: true
-    newLinePerStatistic: true
+    NewLinePerStatistic: true
 #################
 # Notifications #
 #################
