--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,7 @@ branch: stable
 thread: http://dev.bukkit.org/server-mods/lagmeter/
 database: false
 description: Lets you check the server lag, in ticks-per-second
+dev-url: http://dev.bukkit.org/server-mods/lagmeter/
 commands:
     lag: 
         description: Check current lag
