--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 		<dependency>
 			<groupId>net.milkbowl.vault</groupId>
 			<artifactId>Vault</artifactId>
-			<version>1</version>
+			<version>1.2.22-SNAPSHOT</version>
 			<type>jar</type>
 			<optional>true</optional>
 		</dependency>
