--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 						http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>me.thelunarfrog</groupId>
+	<groupId>com.webkonsept.minecraft</groupId>
 	<artifactId>LagMeter</artifactId>
 	<version>1.12.0-SNAPSHOT</version>
 
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.4.2-R0.2</version>
+			<version>1.4.5-R0.2</version>
 			<type>jar</type>
 		</dependency>
 		<!--Vault - Optional -->
@@ -75,4 +75,12 @@
 	</description>
 	<url>http://mc.grminecraft.org:8080/jenkins/job/LagMeter/</url>
 	<inceptionYear>2011</inceptionYear>
+	<issueManagement>
+		<url>http://dev.bukkit.org/server-mods/lagmeter/tickets/</url>
+		<system>BukkitDev Ticket Management</system>
+	</issueManagement>
+	<scm>
+		<url>https://github.com/TheLunarFrog/LagMeter</url>
+		<developerConnection>TheLunarFrog</developerConnection>
+	</scm>
 </project>
