--- a/main/resources/plugin.yml
+++ b/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: LagMeter
 main: main.java.com.webkonsept.minecraft.lagmeter.LagMeter
-version: 1.13.0-SNAPSHOT
+version: 1.13.0
 thread: http://dev.bukkit.org/server-mods/lagmeter/
 database: false
 description: Lets you check the server lag, in ticks-per-second
@@ -38,6 +38,9 @@ commands:
     uptime:
         description: Shows how long the server has been online.
         usage: /<command>
+    ping:
+        description: Pings Googlep, from the server.
+        usage: /<command>
 permissions:
     lagmeter.*:
         description: Gives full access
@@ -46,6 +49,8 @@ permissions:
             lagmeter.command.mem: true
             lagmeter.command.lagmem: true
             lagmeter.command.lm: true
+            lagmeter.command.ping: true
+            lagmeter.command.ping.unlimited: true
     lagmeter.command.lag:
         description: Gives access to the /lag command
         default: op
@@ -77,6 +82,22 @@ permissions:
         default: op
     lagmeter.command.lagmeter.reload:
         description: Gives access to the /lm reload command, which reloads the plugin configuration.
+        default: op
+    lagmeter.command.ping:
+        description: Gives access to the /ping command, which pings Google.com with one packet of 32 bytes.
+        children:
+            lagmeter.command.lping: true
+        default: true
+    lagmeter.command.lping:
+        description: Gives access to the /ping command, which pings Google.com with one packet of 32 bytes.
+        default: true
+    lagmeter.command.ping.unlimited:
+        description: Allows the user to specify the amount of packets the command should send.
+        children:
+            lagmeter.command.lping.unlimited: true
+        default: op
+    lagmeter.command.lping.unlimited:
+        description: Allows the user to specify the amount of packets the command should send.
         default: op
     lagmeter.help:
         description: Gives access to the /lm help command, which shows commands the sender has access to.
