fix pagination. final commit for release 1.13.0

--- a/main/resources/plugin.yml
+++ b/main/resources/plugin.yml
@@ -40,10 +40,10 @@ commands:
         usage: /<command>
     ping:
         description: Pings Google.com, from the server.
-        usage: /<command>
+        usage: /<command> [amount of packets]
     lping:
         description: Pings Google.com, from the server.
-        usage: /<command>
+        usage: /<command> [amount of packets]
 permissions:
     lagmeter.*:
         description: Gives full access
