--- a/main/resources/settings.yml
+++ b/main/resources/settings.yml
@@ -16,6 +16,20 @@ LoadedChunksOnLoad: true
 #Should LagMeter display all of the entities that exist at the time of plugin (re)load?
 #Default: true
 displayEntitiesOnLoad: true
+#########################
+# Uptime-based Commands #
+#########################
+#List of up-time commands.
+#Format: /command text{<>}amountOfTime
+#Proper time delimiters: y: years (ha), m: months, w: weeks, d: days, h: hours, m: minutes, s: seconds
+#Can use any combination of these delimiters, for example, 3y1d, 3w1d, 2h1d, etc.
+UptimeCommands:
+    commandList:
+        - /stop{<>}7d
+        - /reload{<>}12h30m30s
+        - /lag{<>}30m
+    #If the commands are set to repeat, they will be run, for example, if the uptime trigger is set to 4h, then it will run every 4h.
+    repeatCommands: true
 #################
 ##   Commands  ##
 #################
